--- a/src/app/quiz-instruction/quiz-instruction.component.html
+++ b/src/app/quiz-instruction/quiz-instruction.component.html
@@ -1,32 +1,45 @@
 <div class="container-fluid">
-    <div class="row ">
+    <!-- Bootstrap full-width container -->
+    <div class="row pb-4">
         <div class="col-12">
+            <div class="">
+                <!-- Navigation button to go back to Quiz Categories -->
+                <button type="button" class="btn btn-secondary " routerLink="/home">Back</button>
+            </div>
+
+        </div>
+
+        <div class="col-12">
+            <!-- Full-width column for centering all content -->
             <div class="wrapper d-flex flex-column align-items-center ">
-                <div class="pb-4">
+
+
+                <div class="pb-2">
+                    <!-- Main heading for the quiz instructions -->
                     <h1 class="text-primary text-center">Instructions</h1>
                 </div>
+
                 <div class="card fs-4">
+                    <!-- Card for displaying quiz rules and guidelines -->
                     <ul>
-                        <li>The Quiz is a multiple choise question type quiz you are given<strong> 4 options.</strong></li>
+                        <li>The Quiz is a multiple choise question type quiz you are given<strong> 4 options.</strong>
+                        </li>
                         <li>There is only one correct answer out of 4 given options.</li>
                         <li>There are <strong>total 10 questions </strong>in the each quiz.</li>
-                        <li>For every question you are given<strong> 30 seconds</strong> to tell the correct answers.</li>
+                        <li>For every question you are given<strong> 30 seconds</strong> to tell the correct answers.
+                        </li>
                         <li>You need <strong>7 correct answers</strong> to pass.</li>
                         <li>If the timer runs out, unanswered questions will be marked incorrect.</li>
                     </ul>
                     <div class="text-end">
-                        <button type="button" class="btn btn-primary mt-5" routerLink="/quiz/category">Start Quiz</button>
+                        <!-- Start Quiz Button (Navigates to Quiz Category Page) -->
+                        <button type="button" class="btn btn-primary mt-3" routerLink="/quiz/category">Start
+                            Quiz</button>
 
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
-    <div class="row pt-4 text-center pb-4">
-        <div class="c0l-12">
-            <button type="button" class="btn btn-primary" routerLink="/home">Go To Home</button>
-
-        </div>
-    </div>
-
 </div>
